fix articles list on mobile

--- a/color-theory-rants/styles.css
+++ b/color-theory-rants/styles.css
@@ -97,6 +97,9 @@ article p {
     .flex-grid {
         flex-direction: column;
     }
+    body {
+        display:block;
+    }
     .blog-container{
         width:unset;
     }
